--- a/err-tiquette/purrfect.html
+++ b/err-tiquette/purrfect.html
@@ -316,7 +316,7 @@ body {
   <div id="chatContainer" class="chat-container">
     <div class="chat-header">Miss Miki-Neko</div>
     <div class="chat-messages">
-      <div class="instructions">Welcome to the Tea Parlour Quest! Click the umbrella to start, then type your responses and follow the prompts. Enjoy the mystery! 🕵️‍♀️</div>
+      <div class="instructions">Welcome to the Tea Parlour Quest! Type your responses and follow the prompts. Enjoy the mystery! 🕵️‍♀️</div>
       <div id="scrollingText">
         <div class="chat-message">“Oh, hello there, you curious wanderer! I'm Miki-Neko, eldest of the Chimera-Cats, a dash of proper tea, a sprinkle of wonder, and a rebellious kick. Fancy joining me for a tea party that's equal parts etiquette lesson and madcap adventure? Let's chat a bit first, shall we?” ☕✨</div>
         <button class="begin-quest" onclick="startQuest()">Begin Quest</button>
