--- a/err-tiquette/purglitchez.html
+++ b/err-tiquette/purglitchez.html
@@ -229,6 +229,50 @@ body {
 .chat-input::placeholder {
   color: #d0c1f7;
 }
+  /* Twilight Zone Static Effect */
+.static-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+    0deg,
+    rgba(255,255,255,0.1) 0px,
+    rgba(0,0,0,0.1) 1px,
+    rgba(255,255,255,0.1) 2px,
+    rgba(0,0,0,0.1) 3px
+  ),
+  repeating-linear-gradient(
+    90deg,
+    rgba(255,255,255,0.1) 0px,
+    rgba(0,0,0,0.1) 1px,
+    rgba(255,255,255,0.1) 2px,
+    rgba(0,0,0,0.1) 3px
+  );
+  background-size: 4px 4px;
+  opacity: 1;
+  animation: staticFlicker 2.5s ease-out forwards;
+  z-index: 16; /* Above chat but below other elements */
+}
+@keyframes staticFlicker {
+  0% { opacity: 1; filter: grayscale(100%) contrast(2) brightness(1.5); }
+  20% { opacity: 0.9; filter: grayscale(100%) contrast(2.5) brightness(1.2); }
+  40% { opacity: 0.7; filter: grayscale(100%) contrast(3) brightness(1); }
+  60% { opacity: 0.5; filter: grayscale(80%) contrast(2.5) brightness(1.2); }
+  80% { opacity: 0.3; filter: grayscale(50%) contrast(2) brightness(1.5); }
+  100% { opacity: 0; filter: grayscale(0%) contrast(1) brightness(1); }
+}
+.chat-container.static {
+  opacity: 0;
+  animation: revealChat 2.5s ease-out forwards;
+}
+@keyframes revealChat {
+  0% { opacity: 0; filter: blur(2px); }
+  50% { opacity: 0.5; filter: blur(1px); }
+  100% { opacity: 1; filter: blur(0); }
+}
+
 /* Glitch Effect */
 .glitch {
   animation: sizzle 1.5s ease-in-out;
