--- a/err-tiquette/purglitchez.html
+++ b/err-tiquette/purglitchez.html
@@ -229,7 +229,7 @@ body {
 .chat-input::placeholder {
   color: #d0c1f7;
 }
-  /* Twilight Zone Static Effect */
+/* Vintage TV Static Effect */
 .static-overlay {
   position: absolute;
   top: 0;
@@ -238,29 +238,42 @@ body {
   height: 100%;
   background: repeating-linear-gradient(
     0deg,
-    rgba(255,255,255,0.1) 0px,
-    rgba(0,0,0,0.1) 1px,
-    rgba(255,255,255,0.1) 2px,
-    rgba(0,0,0,0.1) 3px
+    rgba(255,255,255,0.05) 0px,
+    rgba(0,0,0,0.05) 1px,
+    rgba(255,255,255,0.05) 2px,
+    rgba(0,0,0,0.05) 3px
   ),
   repeating-linear-gradient(
     90deg,
-    rgba(255,255,255,0.1) 0px,
-    rgba(0,0,0,0.1) 1px,
-    rgba(255,255,255,0.1) 2px,
-    rgba(0,0,0,0.1) 3px
+    rgba(255,255,255,0.02) 0px,
+    rgba(0,0,0,0.02) 1px,
+    rgba(255,255,255,0.02) 2px,
+    rgba(0,0,0,0.02) 3px
   );
   background-size: 4px 4px;
   opacity: 1;
-  animation: staticFlicker 2.5s ease-out forwards;
-  z-index: 16; /* Above chat but below other elements */
+  animation: tvStatic 2.5s ease-out forwards;
+  z-index: 16;
 }
-@keyframes staticFlicker {
-  0% { opacity: 1; filter: grayscale(100%) contrast(2) brightness(1.5); }
-  20% { opacity: 0.9; filter: grayscale(100%) contrast(2.5) brightness(1.2); }
-  40% { opacity: 0.7; filter: grayscale(100%) contrast(3) brightness(1); }
-  60% { opacity: 0.5; filter: grayscale(80%) contrast(2.5) brightness(1.2); }
-  80% { opacity: 0.3; filter: grayscale(50%) contrast(2) brightness(1.5); }
+.static-overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(to right, transparent, rgba(255,255,255,0.3), transparent);
+  animation: scanLine 0.1s linear infinite;
+}
+@keyframes scanLine {
+  0% { top: 0; }
+  100% { top: 100%; }
+}
+@keyframes tvStatic {
+  0% { opacity: 1; filter: grayscale(100%) contrast(1.5) brightness(1.2); }
+  25% { opacity: 0.8; filter: grayscale(100%) contrast(1.3) brightness(1.1); }
+  50% { opacity: 0.6; filter: grayscale(100%) contrast(1.2) brightness(1); }
+  75% { opacity: 0.4; filter: grayscale(80%) contrast(1.1) brightness(1.1); }
   100% { opacity: 0; filter: grayscale(0%) contrast(1) brightness(1); }
 }
 .chat-container.static {
@@ -268,9 +281,10 @@ body {
   animation: revealChat 2.5s ease-out forwards;
 }
 @keyframes revealChat {
-  0% { opacity: 0; filter: blur(2px); }
-  50% { opacity: 0.5; filter: blur(1px); }
+  0% { opacity: 0; filter: blur(1px); }
+  50% { opacity: 0.5; filter: blur(0.5px); }
   100% { opacity: 1; filter: blur(0); }
+
 }
 
 /* Glitch Effect */
