--- a/err-tiquette/teachat2.html
+++ b/err-tiquette/teachat2.html
@@ -359,7 +359,7 @@ body {
   font-size: 1.2rem;
   transition: background 0.3s;
 }
-.quiz-button:hover {
+.quiz-button:hover { 
   background: rgba(183,144,255,0.4);
 }
 .quiz-button.correct {
@@ -566,8 +566,77 @@ function checkAnswer(answer) {
     }, 2000);
   }
 }
+function checkAnswer(answer) {
+  const buttons = document.querySelectorAll('.quiz-button');
+  buttons.forEach(btn => btn.disabled = true);
+  if (answer === 'A') {
+    buttons[0].classList.add('correct');
+    appendMessage("“Correct! You're a natural – Miss Primrose would be proud. Kira Tank might rebel, but you know better!”", false, nextScrollingText);
+    // Proceed to tea serving etiquette
+    setTimeout(() => {
+      appendMessage("“Great job! Now, let's move to serving tea properly. Kira Tank might slosh it everywhere like a wild storm, but Miss Primrose insists on elegance. Question 1: When pouring tea, where should the spout of the teapot face? A) Toward the guest, B) Away from the guest, C) Straight up?”", false, nextScrollingText);
+      // Add quiz buttons for tea question 1
+      const buttonsContainer = document.createElement('div');
+      buttonsContainer.className = 'quiz-buttons';
+      buttonsContainer.innerHTML = `
+        <button class="quiz-button" onclick="checkTeaAnswer('B', 1)">A) Toward the guest</button>
+        <button class="quiz-button" onclick="checkTeaAnswer('B', 1)">B) Away from the guest</button>
+        <button class="quiz-button" onclick="checkTeaAnswer('B', 1)">C) Straight up</button>
+      `;
+      nextScrollingText.parentNode.appendChild(buttonsContainer);
+    }, 3000);
+  } else {
+    buttons[answer === 'B' ? 1 : 2].classList.add('wrong');
+    appendMessage("“Oops, that's more Kira Tank than tea party! Try again – etiquette is key!”", false, nextScrollingText);
+    setTimeout(() => {
+      buttons.forEach(btn => {
+        btn.disabled = false;
+        btn.classList.remove('wrong');
+      });
+    }, 2000);
+  }
+}
 
+// New function for tea etiquette questions
+function checkTeaAnswer(correctAnswer, questionNumber) {
+  const buttons = document.querySelectorAll('.quiz-button');
+  buttons.forEach(btn => btn.disabled = true);
+  const selected = event.target.textContent.charAt(0); // Get A, B, or C
+  if (selected === correctAnswer) {
+    buttons[correctAnswer === 'B' ? 1 : (correctAnswer === 'A' ? 0 : 2)].classList.add('correct');
+    appendMessage("“Well done! Proper tea service is an art – Miss Primrose approves.”", false, nextScrollingText);
+    if (questionNumber === 1) {
+      // Proceed to question 2
+      setTimeout(() => {
+        appendMessage("“Question 2: How should you hold the teacup handle? A) With your pinky extended, B) With your thumb and forefinger, C) With your whole hand?”", false, nextScrollingText);
+        const buttonsContainer = document.createElement('div');
+        buttonsContainer.className = 'quiz-buttons';
+        buttonsContainer.innerHTML = `
+          <button class="quiz-button" onclick="checkTeaAnswer('B', 2)">A) With your pinky extended</button>
+          <button class="quiz-button" onclick="checkTeaAnswer('B', 2)">B) With your thumb and forefinger</button>
+          <button class="quiz-button" onclick="checkTeaAnswer('B', 2)">C) With your whole hand</button>
+        `;
+        nextScrollingText.parentNode.appendChild(buttonsContainer);
+      }, 3000);
+    } else if (questionNumber === 2) {
+      // End lesson or hint at next
+      setTimeout(() => {
+        appendMessage("“Excellent! You've mastered tea service. Next time, we'll explore etiquette in Paris – Kira Tank might cause a scene, but Miss Primrose will guide us. Ready for more?”", false, nextScrollingText);
+      }, 3000);
+    }
+  } else {
+    buttons[selected === 'A' ? 0 : (selected === 'B' ? 1 : 2)].classList.add('wrong');
+    appendMessage("“Not quite – Kira Tank would approve of chaos, but etiquette demands precision! Try again.”", false, nextScrollingText);
+    setTimeout(() => {
+      buttons.forEach(btn => {
+        btn.disabled = false;
+        btn.classList.remove('wrong');
+      });
+    }, 2000);
+  }
+}
 function teacupClick() {
+  
   // Fun interaction: Clicking teacups reveals a random fact or pun
   const facts = [
     "“Did you know? In France, don't clink glasses too hard – it's bad luck!”",
