--- a/teaparlor/x2revised.html
+++ b/teaparlor/x2revised.html
@@ -515,20 +515,25 @@ function startLesson1() {
     nextScrollingText.parentNode.appendChild(buttonsContainer);
   }, 2000);
 }
-
 function checkAnswer(answer) {
   const buttons = document.querySelectorAll('.quiz-button');
-  buttons.forEach(btn => btn.disabled = true); // Disable buttons after answer
+  buttons.forEach(btn => {
+    btn.disabled = true; // Disable all buttons immediately
+    btn.style.pointerEvents = 'none'; // Prevent further clicks
+  });
+  
   if (answer === 'A') {
     buttons[0].classList.add('correct');
     appendMessage("“Correct! You're a natural – Miss Primrose would be proud. Kira Tank might rebel, but you know better!”", false, nextScrollingText);
     // Proceed to tea serving etiquette
     setTimeout(() => {
       appendMessage("“Great job! Now, let's move to serving tea properly. Kira Tank might slosh it everywhere like a wild storm, but Miss Primrose insists on elegance. Question 1: When pouring tea, where should the spout of the teapot face? A) Toward the guest, B) Away from the guest, C) Straight up?”", false, nextScrollingText);
-      // Remove any existing quiz buttons
+      // Remove any existing quiz buttons safely
       const existingButtons = document.querySelector('.quiz-buttons');
-      if (existingButtons) existingButtons.remove();
-      // Add quiz buttons for tea question 1
+      if (existingButtons) {
+        existingButtons.remove();
+      }
+      // Add new quiz buttons for tea question 1
       const buttonsContainer = document.createElement('div');
       buttonsContainer.className = 'quiz-buttons';
       buttonsContainer.innerHTML = `
@@ -545,9 +550,13 @@ function checkAnswer(answer) {
     setTimeout(() => {
       buttons.forEach(btn => {
         btn.disabled = false;
+        btn.style.pointerEvents = 'auto';
         btn.classList.remove('wrong');
       });
     }, 2000);
+  }
+}
+
   }
 }
 
